# cpp_design_patterns

./: .gitignore
abstract_factory_car/: CMakeLists.txt  car.h  car_factory.h  main.cpp
abstract_factory_drink/: CMakeLists.txt  drinks.h  main.cpp
adapter_hash_cached/: CMakeLists.txt  main.cpp
array_backed_properties/: CMakeLists.txt  main.cpp
bimap/: CMakeLists.txt  main.cpp
bridge/: CMakeLists.txt  main.cpp
bridge_homework/: CMakeLists.txt  main.cpp
bridge_pimpl/: CMakeLists.txt  main.cpp  person.cpp  person.h
builder/: CMakeLists.txt  main.cpp
builder_facets/: CMakeLists.txt  main.cpp  person.h
class_template/: CMakeLists.txt  main.cpp
command/: CMakeLists.txt  main.cpp
composite/: CMakeLists.txt  main.cpp
composite_homework/: CMakeLists.txt  main.cpp
coroutine/: async_counter.py  yield_consume.py
decorator_functional/: CMakeLists.txt  main.cpp
decorator_mixin/: CMakeLists.txt  main.cpp
dependency_principal/: CMakeLists.txt  main.cpp
double_dispatch/: CMakeLists.txt  expression.cpp  expression.h  main.cpp  visitor.cpp  visitor.h
erase_remove/: CMakeLists.txt  main.cpp
factory_homework/: CMakeLists.txt  main.cpp
factory_method/: CMakeLists.txt  main.cpp
fluent_builder/: CMakeLists.txt  main.cpp
flyweight_boost/: CMakeLists.txt  main.cpp
flyweight_homework/: CMakeLists.txt  main.cpp
flyweight_manual/: CMakeLists.txt  main.cpp
fstream/: CMakeLists.txt  main.cpp
lambda_expression/: CMakeLists.txt  main.cpp
mediator_chatroom/: CMakeLists.txt  chatroom.cpp  chatroom.h  main.cpp  person.cpp  person.h
mediator_homework/: CMakeLists.txt  main.cpp
move_semantics/: CMakeLists.txt  holder.h  main.cpp
pybind_test/: CMakeLists.txt  hello_world.cpp
pybind_test/py/: py_hello_world.py
(+55 files in other folders)
